# MyTask-Kanban-Bord

./: .gitignore  CMakeLists.txt  Main.qml  README.md  app.aps  databasemanager.cpp  databasemanager.h  languagemanager.cpp  languagemanager.h  main.cpp  resources.qrc  ru_RU.ts  taskmodel.cpp  taskmodel.h  uk_UA.ts
